--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "taoland",
+  "name": "brightLand",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "yangyuetao",
+  "author": "yangziming",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
