--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     }
   },
   "dependencies": {
+    "@umijs/fabric": "^1.2.1",
     "async-validator": "^1.8.2",
     "axios": "^0.18.0",
     "cors": "^2.8.4",
@@ -40,6 +41,7 @@
     "lint-staged": "^9.5.0",
     "mavon-editor": "^2.4.16",
     "mongoose": "^5.0.6",
+    "pretty-quick": "^2.0.1",
     "vue": "^2.5.2",
     "vue-hot-reload-api": "^2.2.4",
     "vue-resource": "^1.3.5",
